force-app/main/default/objects/Dish_Option__c/Dish_Option__c.object-meta.xml
<CustomObject>
    <description>Used to track the information on Dish responses on Divestiture Sites.  Visible only to specially cleared employees.</description>
    <label>Dish Option</label>
    <nameField>
        <displayFormat>Dish-{0}</displayFormat>
        <label>Dish Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dish Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>