force-app/main/default/objects/Dish_Option__c/fields/Create_Site_Walk_Form__c.field-meta.xml
<CustomField>
    <fullName>Create_Site_Walk_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Site Walk Form</label>
    <type>Checkbox</type>
</CustomField>