force-app/main/default/objects/Dish_Option__c/fields/Date_30_Day_Extension_Sent_to_Dish__c.field-meta.xml
<CustomField>
    <fullName>Date_30_Day_Extension_Sent_to_Dish__c</fullName>
    <label>Date 30 Day Extension Sent to Dish</label>
    <type>Date</type>
</CustomField>