force-app/main/default/objects/Dish_Option__c/fields/Days_since_NOD_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_since_NOD_Issue_Date__c</fullName>
    <formula>TODAY() -  NOD_Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Test Field</inlineHelpText>
    <label>Days since NOD Issue Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>