force-app/main/default/objects/Dish_Option__c/fields/Days_Until_Option_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Option_Expiration__c</fullName>
    <formula>IF(OR( TEXT(Dish_Status__c)=&quot;First Option Period&quot;,TEXT(Dish_Status__c) =&quot;No Option Received&quot; ),
 (NOD_Issue_Date__c  + 60)- TODAY(), 
Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Option Expiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>