force-app/main/default/objects/Dish_Option__c/fields/Did_Dish_Accept_Site__c.field-meta.xml
<CustomField>
    <fullName>Did_Dish_Accept_Site__c</fullName>
    <inlineHelpText>Dish accepted the site.</inlineHelpText>
    <label>Did Dish Accept Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No Response Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>