force-app/main/default/objects/Dish_Option__c/fields/Did_Dish_Option_Equipment_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Did_Dish_Option_Equipment_Y_N__c</fullName>
    <label>Did Dish Option Equipment? (Y/N)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>