force-app/main/default/objects/Dish_Option__c/fields/Dish_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Dish_Acceptance_Date__c</fullName>
    <inlineHelpText>Date that Dish notified T-Mobile that the site was accepted.</inlineHelpText>
    <label>Dish Acceptance Date</label>
    <type>Date</type>
</CustomField>