force-app/main/default/objects/Dish_Option__c/fields/DISH_intends_for_the_aforementioned_exer__c.field-meta.xml
<CustomField>
    <fullName>DISH_intends_for_the_aforementioned_exer__c</fullName>
    <label>DISH intends for the aforementioned exer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>An assignment and assumption of the aforementioned rights of Seller.</fullName>
            </value>
            <value>
                <fullName>Another form of transaction whereby DISH obtains the aforementioned rights of Seller.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>