force-app/main/default/objects/Dish_Option__c/fields/Dish_Status__c.field-meta.xml
<CustomField>
    <fullName>Dish_Status__c</fullName>
    <label>Dish Option Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clock Not Started</fullName>
            </value>
            <value>
                <fullName>First Option Period</fullName>
            </value>
            <value>
                <fullName>No Option Received</fullName>
            </value>
            <value>
                <fullName>Transfer Period</fullName>
            </value>
            <value>
                <fullName>Response Not Recieved</fullName>
            </value>
            <value>
                <fullName>Decommission Period</fullName>
            </value>
            <value>
                <fullName>Declined/Did Not Respond</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>