force-app/main/default/objects/Dish_Option__c/fields/Divestiture_Site__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site__c</fullName>
    <label>Divestiture Site</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Dish Options</relationshipLabel>
    <relationshipName>Dish_Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>