force-app/main/default/objects/Dish_Option__c/fields/Lease_Name__c.field-meta.xml
<CustomField>
    <fullName>Lease_Name__c</fullName>
    <label>Lease Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>