force-app/main/default/objects/Dish_Option__c/fields/LN_Manager__c.field-meta.xml
<CustomField>
    <fullName>LN_Manager__c</fullName>
    <label>LN Manager</label>
    <length>55</length>
    <type>Text</type>
</CustomField>