force-app/main/default/objects/Dish_Option__c/fields/LN_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>LN_Manager_Email__c</fullName>
    <label>LN Manager Email</label>
    <type>Email</type>
</CustomField>