force-app/main/default/objects/Dish_Option__c/fields/LN_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>LN_SF_ID__c</fullName>
    <label>LN SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>