force-app/main/default/objects/Dish_Option__c/fields/LN_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>LN_Submitter_Email__c</fullName>
    <label>LN Submitter Email</label>
    <type>Email</type>
</CustomField>