force-app/main/default/objects/Dish_Option__c/fields/NOD_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>NOD_Issue_Date__c</fullName>
    <inlineHelpText>Date the Notice of Decommsion was issued to DIsh.  Autofilled by a process.</inlineHelpText>
    <label>NOD Issue Date</label>
    <type>Date</type>
</CustomField>