force-app/main/default/objects/Dish_Option__c/fields/NOD_Issue_Date_Original__c.field-meta.xml
<CustomField>
    <fullName>NOD_Issue_Date_Original__c</fullName>
    <formula>Divestiture_Site__r.Date_Loaded_to_Intralinks_Original__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Filled form Divestiture Site Record - Date Loaded to Intralinks Original.  Does not impact clock tracking</inlineHelpText>
    <label>NOD Issue Date Original</label>
    <type>Date</type>
</CustomField>