force-app/main/default/objects/Dish_Option__c/fields/Notice_of_Decom_NOD__c.field-meta.xml
<CustomField>
    <fullName>Notice_of_Decom_NOD__c</fullName>
    <formula>Divestiture_Site__r.Notice_of_Decom_NOD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The decommision date that has been shared with Dish.</inlineHelpText>
    <label>Notice of Decom (NOD)</label>
    <type>Date</type>
</CustomField>