force-app/main/default/objects/Dish_Option__c/fields/Option_Choice__c.field-meta.xml
<CustomField>
    <fullName>Option_Choice__c</fullName>
    <label>Option Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All, but not less than all, of Seller’s right, title, and interest in and to all of the Assets with respect to the Site.</fullName>
            </value>
            <value>
                <fullName>Seller’s right, title, and interest in and to the Leases and Easements with respect to the Site</fullName>
            </value>
            <value>
                <fullName>All of Seller’s right, title, and interest in and to the Leases, Easements, and all of the 800 MHz Equipment (if applicable and requested by DISH) and Vacated Equipment applicable to the Decommissioned Site.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>