force-app/main/default/objects/Dish_Option__c/fields/Option_Choice_Updated__c.field-meta.xml
<CustomField>
    <fullName>Option_Choice_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Option Choice Updated</label>
    <type>Checkbox</type>
</CustomField>