force-app/main/default/objects/Dish_Option__c/fields/Option_Date__c.field-meta.xml
<CustomField>
    <fullName>Option_Date__c</fullName>
    <inlineHelpText>Date Dish rejected or accepted option.</inlineHelpText>
    <label>Option Date</label>
    <type>Date</type>
</CustomField>