force-app/main/default/objects/Dish_Option__c/fields/Physical_Decommsion_Date_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Physical_Decommsion_Date_Source_System__c</fullName>
    <formula>Divestiture_Site__r.Physical_Decommsion_Date_from_Source_Sys__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecasted Physical Decommision Date from Sprint Vision / ElemenT</inlineHelpText>
    <label>Physical Decommsion Date (Source System)</label>
    <type>Date</type>
</CustomField>