force-app/main/default/objects/Dish_Option__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <label>Regional Manager Email</label>
    <type>Email</type>
</CustomField>