force-app/main/default/objects/Dish_Option__c/fields/Regional_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager_Name__c</fullName>
    <label>Regional Manager Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>