force-app/main/default/objects/Dish_Option__c/fields/RF_Shutdown_Forecast_Date_Source_System__c.field-meta.xml
<CustomField>
    <fullName>RF_Shutdown_Forecast_Date_Source_System__c</fullName>
    <formula>Divestiture_Site__r.RF_Shutdown_Forecast_Date_from_Source_Sy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The current forecasted logical decommsion date from Sprint Vision / ElemenT</inlineHelpText>
    <label>RF Shutdown Forecast (Source System)</label>
    <type>Date</type>
</CustomField>