force-app/main/default/objects/Dish_Option__c/fields/Site_Deconstruction_Record__c.field-meta.xml
<CustomField>
    <fullName>Site_Deconstruction_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Deconstruction Record</label>
    <referenceTo>Site_Decommission__c</referenceTo>
    <relationshipLabel>Dish Options</relationshipLabel>
    <relationshipName>Dish_Options</relationshipName>
    <type>Lookup</type>
</CustomField>