force-app/main/default/objects/Dish_Option__c/fields/Update_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Update_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For admins only, triggers daily status check.</inlineHelpText>
    <label>Update Checkbox</label>
    <type>Checkbox</type>
</CustomField>