force-app/main/default/objects/Dish_Option__c/fields/White_Glove_Comments__c.field-meta.xml
<CustomField>
    <fullName>White_Glove_Comments__c</fullName>
    <description>Special Handling Required- Used in tandem with white glove checkbox. Comments are hidden from all except HQ team</description>
    <inlineHelpText>Special Handling Required- Used in tandem with white glove checkbox. Comments are hidden from all except HQ team</inlineHelpText>
    <label>White Glove Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>