force-app/main/default/objects/Dish_Option__c/fields/White_Glove_Designation__c.field-meta.xml
<CustomField>
    <fullName>White_Glove_Designation__c</fullName>
    <formula>Divestiture_Site__r.White_Glove__c</formula>
    <inlineHelpText>Special Handling Required- Check this box to update and clearly identify across the Divest Program all records that require White Glove Escalation &amp; Handling.</inlineHelpText>
    <label>White Glove Designation</label>
    <type>Checkbox</type>
</CustomField>