force-app/main/default/objects/Dish_Option__c/fields/X30_Day_Extension_Sent_to_Dish__c.field-meta.xml
<CustomField>
    <fullName>X30_Day_Extension_Sent_to_Dish__c</fullName>
    <label>30 Day Extension Sent to Dish</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>