force-app/main/default/objects/Dish_Option__c/validationRules/Dish_Accept_Response_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Dish_Accept_Response_Requires_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISBLANK( Dish_Acceptance_Date__c ),
 OR(TEXT( Did_Dish_Accept_Site__c ) = &quot;Yes&quot;,
TEXT( Did_Dish_Accept_Site__c ) = &quot;No&quot;))</errorConditionFormula>
    <errorDisplayField>Dish_Acceptance_Date__c</errorDisplayField>
    <errorMessage>If entering a Yes or No for Dish Acceptane Response, a date must be entered)</errorMessage>
</ValidationRule>