force-app/main/default/objects/Dish_Option__c/validationRules/Dish_Option_Response_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Dish_Option_Response_Requires_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  ISBLANK(Option_Date__c),
 OR(TEXT(Did_Dish_Option_Site__c) = &quot;Yes&quot;,
TEXT(Did_Dish_Option_Site__c) = &quot;No&quot;))</errorConditionFormula>
    <errorDisplayField>Did_Dish_Option_Site__c</errorDisplayField>
    <errorMessage>If entering a Yes or No for Dish Option Response, a date must be entered)</errorMessage>
</ValidationRule>