force-app/main/default/objects/Dish_Option__c/validationRules/Option_Choice_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Option_Choice_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Option_Choice__c , &quot;&quot;) , NOT(ISPICKVAL(DISH_intends_for_the_aforementioned_exer__c, &quot;&quot;)))</errorConditionFormula>
    <errorDisplayField>Option_Choice__c</errorDisplayField>
    <errorMessage>Please populate option choice</errorMessage>
</ValidationRule>